[package]
name = "mylibsql"
version = "0.1.0"
edition = "2021"

[dependencies]
libsql = "0.6.0"
libsql-sys = "0.8.0"
libsql_replication = "0.6.0"
anyhow = "1"
tracing = "0.1"
bytes = "1"
zerocopy = { version = "0.7.32", features = ["derive", "alloc"] }
thiserror = "2.0.11"
uuid = "1.12.0"
crc = "3.2.1"
tokio = { version = "1.0", features = ["full"] }
parking_lot = "0.12"
tempfile = "3.15.0"
futures = "0.3.31"

[dev-dependencies]
base64 = "0.13.0"