[package]
name = "mylibsql"
version = "0.1.1"
edition = "2021"
authors = ["Guillaume Bort <guillaume.bort@gmail.com>"]
description = "A personal take on libsql, enabling SQLite replication with application-controlled checkpointing—no dedicated server required"
readme = "README.md"
license-file = "LICENSE.md"
repository = "https://github.com/guillaumebort/mylibsql"
documentation = "https://docs.rs/mylibsql/latest/mylibsql/"

[dependencies]
libsql = "0.6.0"
libsql-sys = "0.8.0"
libsql_replication = "0.6.0"
anyhow = "1"
tracing = "0.1"
bytes = "1"
zerocopy = { version = "0.7.32", features = ["derive", "alloc"] }
crc = "3.2.1"
tokio = { version = "1.0", features = ["full"] }
parking_lot = "0.12"
tempfile = "3.15.0"
futures = "0.3.31"

[dev-dependencies]
base64 = "0.13.0"
rand = "0.8.4"
uuid = { version = "1.12.1", features = ["v4"] }

[[bin]]
name = "generate_test_data"
path = "tests/generate_test_data.rs"